--- a/src/gallery.html
+++ b/src/gallery.html
@@ -91,7 +91,7 @@
                 </section>
                 <section id="cta" class="main special">
                     <ul class="actions">
-                        <li><a href='../public.index.html' class="button big">HOME</a></li>
+                        <li><a href='../public/index.html' class="button big">HOME</a></li>
                     </ul>
                 </section>
             </section>
